fixed task items jumping on drag

--- a/src/components/dashboard/columns/ColumnItem.module.scss
+++ b/src/components/dashboard/columns/ColumnItem.module.scss
@@ -35,7 +35,7 @@
   border-bottom-right-radius: $radius-small;
   padding: 20px 20px;
   padding-top: 0;
-  max-height: 410px;
+  max-height: 420px;
   overflow-y: auto;
   position: relative;
 }
