--- a/src/components/dashboard/tasks/AddTaskForm.module.scss
+++ b/src/components/dashboard/tasks/AddTaskForm.module.scss
@@ -28,6 +28,7 @@
   font-size: $font-small-text;
   box-sizing: border-box;
   position: relative;
+  margin-bottom: $margin-medium-px;
 }
 .addTask {
   display: none;
